--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<script src="js/lib/two.min.js"></script>
 		<script src="js/lib/ZUI.js"></script>
-		<script src="js/lib/getdata.js"></script>
+		<script src="js/getdata.js"></script>
 	</head>
 	<body>
 		<div id="content"></div>
